--- a/src/app/questions/questions.page.html
+++ b/src/app/questions/questions.page.html
@@ -17,6 +17,6 @@
 </ion-item>
  </div>
 
-<ion-button expand="block"> Generate New Report </ion-button>
+<ion-button expand="block" (click)="navigateToPage('/acct-info')"> Generate New Report </ion-button>
 
 </ion-content>
