Added some login page styling

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
+<ion-header translucent>
+  <ion-toolbar color="secondary">
+    <ion-title text-center>IBM Cloud Assessment Tool Login</ion-title>  
   </ion-toolbar>
 </ion-header>
-
 <ion-content padding text-center no-bounce>
 
-    <button ion-button block type (click)="logIn()" class="btn">
+	<ion-img src="assets/logo.png" style="display: block;
+  margin-left: auto;
+  margin-right: auto; width: 30%"></ion-img>
+
+    <ion-button ion-button (click)="logIn()" class="btn" >
     	Login
-    </button>
+    </ion-button>
 
 </ion-content>
