--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,16 +1,39 @@
 <ion-header translucent>
   <ion-toolbar color="secondary">
-    <ion-title text-center>IBM Cloud Assessment Tool Login</ion-title>  
+    <ion-title text-center>IBM Cloud</ion-title>  
   </ion-toolbar>
 </ion-header>
-<ion-content padding text-center no-bounce>
-
-	<ion-img src="assets/logo.png" style="display: block;
-  margin-left: auto;
-  margin-right: auto; width: 30%"></ion-img>
-
+<ion-content padding text-center no-bounce center class="background">
+    <ion-card style="width: 80%; height:100%; align-items: center; justify-content: center;  margin: auto;" class = "whitebackground">
+  <ion-card-header>
+    <ion-card-title>IBM Cloud Assessment Tool</ion-card-title>
+        <ion-card-subtitle>Learn how to leverage information about your client's environment to find new opportunities.</ion-card-subtitle>
+        	<ion-img src="assets/logo.png" style="display: block; margin-left: auto; margin-right: auto; width: 20%"></ion-img>
     <ion-button ion-button (click)="logIn()" class="btn" >
     	Login
     </ion-button>
+
+  </ion-card-header>
+
+  <ion-card-content>
+    <ion-label>Empower your customer experience.</ion-label>
+
+    <ion-item></ion-item>
+    <ion-item>
+    	<ion-grid>
+    		<ion-row>Other useful links:</ion-row>
+    		<ion-row>
+    			<a href="https://w3-connections.ibm.com/wikis/home?lang=en-us#!/wiki/Wf58c4c538dbf_45b4_b7a7_5003d0ceb79b/page/ZACS">ZACS</a>
+    		</ion-row>
+    		<ion-row>
+    			<a href="https://ibm.seismic.com/x5/doccenter.aspx#/">Seismeic</a>
+    		</ion-row>
+    		<ion-row>
+   				<a href="https://pages.github.ibm.com/s-d-field-enablement/sites/engage/">Engage!</a>
+   			</ion-row>
+   		</ion-grid>
+   	</ion-item>
+  </ion-card-content>
+</ion-card>
 
 </ion-content>
