--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,8 +11,10 @@
       </ion-toolbar>
     </ion-header>
 <ion-content>
-  <div class="ion-padding">
+  <div class="ion-padding" text-center>
     <p>The IBM SCL Sales Enablement Tool was created to assist in finding new opportunity within your clients. It provides a guide to fill out information about your client to eventually lead you to new conversations.</p>
+    <p>Getting started:</p>
+    <p>Start by defining your accounts via the button in the top right corner. You can put in information about the specific companies, as well as specific notes you would like to leave for yourself. After creating your accouont, click view to explore options regarding their current entitlements and deployments, their cloud environment, and potential prospecting questions. After all information has been filled out, a report will be generated for you with links to appropriate sales kits.
   </div>
 
 <ion-card *ngFor = "let account of accounts">
