Added logout button

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,6 +11,9 @@
       </ion-toolbar>
     </ion-header>
 <ion-content>
+  <ion-button ion-button (click)="logOut()" class="btn" >
+      Logout
+    </ion-button>
   <div class="ion-padding" text-center>
     <p>The IBM SCL Sales Enablement Tool was created to assist in finding new opportunity within your clients. It provides a guide to fill out information about your client to eventually lead you to new conversations.</p>
     <p>Getting started:</p>
