Added hover hand to options

--- a/src/app/acct-info/acct-info.page.html
+++ b/src/app/acct-info/acct-info.page.html
@@ -10,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-	<ion-card (click)="navigateToPage('/entitled-deployed')">
+	<ion-card (click)="navigateToPage('/entitled-deployed')" style="cursor: pointer;">
 	  <ion-item>
 	<ion-card-header>
     <ion-card-title>IBM Entitled and Deployed Products</ion-card-title>
@@ -19,7 +19,7 @@
     <ion-button fill="outline" slot="end">Complete</ion-button>
   </ion-item>
 </ion-card>
-	<ion-card (click)="navigateToPage('/cloud-info')">
+	<ion-card (click)="navigateToPage('/cloud-info')" style="cursor: pointer;">
 	  <ion-item>
 	<ion-card-header>
     <ion-card-title>Client Cloud Information</ion-card-title>
@@ -28,7 +28,7 @@
     <ion-button fill="outline" slot="end">Complete</ion-button>
   </ion-item>
 </ion-card>
-	<ion-card (click)="navigateToPage('/questions')">
+	<ion-card (click)="navigateToPage('/questions')" style="cursor: pointer;">
 	  <ion-item>
 	<ion-card-header>
     <ion-card-title>Prospect Questions</ion-card-title>
@@ -37,7 +37,7 @@
     <ion-button fill="outline" slot="end">Complete</ion-button>
   </ion-item>
 </ion-card>
-	<ion-card (click)="navigateToPage('/report')">
+	<ion-card (click)="navigateToPage('/report')" style="cursor: pointer;">
 	  <ion-item>
 	<ion-card-header>
     <ion-card-title>Generated Report</ion-card-title>
