--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,8 +24,7 @@
       <ion-icon name="contacts" slot="start"></ion-icon>
       <ion-label text-wrap>Last updated: {{account.date}}</ion-label>
       <ion-button fill="outline" slot="end" (click)="openAccountPage(account)">View</ion-button>
-      <ion-icon name="alert" slot="end" (click)="openAccountPage(account)"  style="cursor: pointer;">
-      </ion-icon>
+      <ion-icon name="close-circle" slot="end" (click)="deleteAccount(account)" style="cursor: pointer;"></ion-icon>
     </ion-item>
     <ion-card-content>
       {{account.info}}
