changed logout to toolbar, capitalized inputs

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,8 @@
 <ion-header translucent>
   <ion-toolbar color="secondary">
+    <ion-buttons slot="start" color="">
+      <ion-button fill="outline" (click)="logOut()">Log Out</ion-button>
+    </ion-buttons>
     <ion-title>IBM SCL Questioning Model</ion-title>
     <ion-buttons slot="primary" color="">
       <ion-button fill="outline" color="light" (click)="presentAlert()">
@@ -9,7 +12,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-button ion-button (click)="logOut()" class="btn" >Logout</ion-button>
   <div class="ion-padding" text-center>
     <p>The IBM SCL Sales Enablement Tool was created to assist in finding new opportunity within your clients. It provides a guide to fill out information about your client to eventually lead you to new conversations.</p>
     <p>Getting started:</p>
