Updated color of card to be completely white

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
       <ion-button fill="outline" slot="end" (click)="openAccountPage(account)">View</ion-button>
       <ion-icon name="close-circle" slot="end" (click)="deleteAccount(account)" style="cursor: pointer;"></ion-icon>
     </ion-item>
-    <ion-card-content>
+    <ion-card-content style="background: #fff">
       {{account.info}}
     </ion-card-content>
   </ion-card>
