--- a/src/app/cloud-info/cloud-info.page.html
+++ b/src/app/cloud-info/cloud-info.page.html
@@ -84,6 +84,6 @@
       </ion-item>
     </ion-radio-group>
   </ion-card>
-  <ion-button expand="block" (click)="navigateToPage('/acct-info')">Continue</ion-button>
+  <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
   <ion-item> </ion-item>
 </ion-content>
