--- a/src/app/questions/questions.page.html
+++ b/src/app/questions/questions.page.html
@@ -17,6 +17,6 @@
 </ion-item>
  </div>
 
-<ion-button expand="block" (click)="navigateToPage('/report')"> Generate New Report </ion-button>
+<ion-button expand="block" (click)="complete('/report', true)"> Generate New Report </ion-button>
 
 </ion-content>
