--- a/src/app/entitled-deployed/entitled-deployed.page.html
+++ b/src/app/entitled-deployed/entitled-deployed.page.html
@@ -17,6 +17,6 @@
       <ion-checkbox disabled="false" (ionChange)="checkedItem($event, product)" [checked]="hasItem(product)"></ion-checkbox><p> &nbsp;{{product}}</p>
     </ion-item>
   </ion-card>
-  <ion-button expand="block" (click)="navigateToPage('/acct-info')">Continue</ion-button>
+  <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
   <ion-item> </ion-item>
 </ion-content>
