--- a/src/app/report/report.page.html
+++ b/src/app/report/report.page.html
@@ -21,7 +21,7 @@
   </ion-card>
   <ion-card *ngIf="this.auth.currentAccount.vmware === 'true'">
     <ion-card-title>We recommend this sales play: VMWare on IBM Cloud</ion-card-title>
-    <ion-item>Because ou said your client was using VM Ware.</ion-item>
+    <ion-item>Because you said your client was using VM Ware.</ion-item>
     <ion-item><a href="https://ibm.seismic.com/X5/DocCenter.aspx?ContentId=4ba45436-b157-47a5-ab91-4659a0c7438f#/doccenter/6978143f-3408-4831-8558-9527b1279d8a/doc/%252Fdd86dcc126-ab33-495f-8000-fddd47641ea0%252Fdde42aea40-e441-4590-bf19-9547502c139b%252Fdfd7040a75-9ebb-4509-9de9-0976d354dc8e%252Fdfd91fb685-d3de-4a0c-b994-362b08b520c9%252Fdf98afe617-f223-4563-a0e2-1f873317b6ad%252Flf86493785-a540-4297-99fe-35b1cf1c5788//?mode=view&searchId=39db74b7-29df-47b7-a486-ff8b6e65d2a4" target="_blank">Link to sales play</a></ion-item>
   </ion-card>
   <ng-container *ngFor="let product of questions">
