--- a/src/app/competitive-install/competitive-install.page.html
+++ b/src/app/competitive-install/competitive-install.page.html
@@ -1,9 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>competitive-install</ion-title>
+<ion-header translucent>
+  <ion-toolbar color="secondary">
+  	<ion-buttons slot="start" color="">
+      <ion-button (click)="navigateToPage('/acct-info')">Go Back</ion-button>
+    </ion-buttons>
+    <ion-title>Competitive Install Page</ion-title>  
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-card *ngFor="let category of products">
+      <ion-item>
+    <ion-card-header>
+      <ion-card-title>{{category.doc.name}}</ion-card-title>
+    </ion-card-header>
+    </ion-item>
+    <ion-item *ngFor="let product of category.doc.products">
+      <ion-checkbox disabled="false" (ionChange)="checkedItem($event, product)" [checked]="hasItem(product)"></ion-checkbox><p> &nbsp;{{product}}</p>
+    </ion-item>
+  </ion-card>
+  <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
+  <ion-item> </ion-item>
 </ion-content>
