--- a/src/app/competitive-install/competitive-install.page.html
+++ b/src/app/competitive-install/competitive-install.page.html
@@ -13,9 +13,13 @@
       <ion-card-title>{{category.doc.name}}</ion-card-title>
     </ion-card-header>
     </ion-item>
-    <ion-item *ngFor="let product of category.doc.products">
-      <ion-checkbox disabled="false" (ionChange)="checkedItem($event, product)" [checked]="hasItem(product)"></ion-checkbox><p> &nbsp;{{product}}</p>
-    </ion-item>
+    <ng-container *ngFor="let product of category.doc.products">
+    	<ng-container *ngFor="let item of removeDuplicateAndSort(product.competitive)">
+    		<ion-item>
+      		<ion-checkbox  disabled="false" (ionChange)="checkedItem($event, product)" [checked]="hasItem(product)"></ion-checkbox><p> &nbsp;{{item}}</p>
+      	</ion-item>
+    	</ng-container>
+	</ng-container>
   </ion-card>
   <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
   <ion-item> </ion-item>
