--- a/src/app/report/report.page.html
+++ b/src/app/report/report.page.html
@@ -34,4 +34,9 @@
       </ion-card>
     </ng-container>
   </ng-container>
+  <ion-card *ngFor="let product of this.auth.currentAccount.competitiveInstall">
+    <ion-card-title> We recommend the sales play for: {{product.name}}</ion-card-title>
+    <ion-item>Because your client is currently using these competitive products: {{product.competitive}}</ion-item>
+    <ion-item><a href="google.com" target="_blank">Link to sales play</a></ion-item>
+  </ion-card>
 </ion-content>
