--- a/src/app/entitled-deployed/entitled-deployed.page.html
+++ b/src/app/entitled-deployed/entitled-deployed.page.html
@@ -13,9 +13,15 @@
       <ion-card-title>{{category.doc.name}}</ion-card-title>
     </ion-card-header>
     </ion-item>
-    <ion-item *ngFor="let product of category.doc.products">
-      <ion-checkbox disabled="false" (ionChange)="checkedItem($event, product)" [checked]="hasItem(product)"></ion-checkbox><p> &nbsp;{{product.name}}</p>
-    </ion-item>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6" *ngFor="let product of category.doc.products">
+          <ion-item>
+            <ion-checkbox disabled="false" (ionChange)="checkedItem($event, product)" [checked]="hasItem(product)"></ion-checkbox><p> &nbsp;{{product.name}}</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-card>
   <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
   <ion-item> </ion-item>
