--- a/src/app/competitive-install/competitive-install.page.html
+++ b/src/app/competitive-install/competitive-install.page.html
@@ -8,18 +8,24 @@
 </ion-header>
 <ion-content>
   <ion-card *ngFor="let category of products">
-      <ion-item>
-    <ion-card-header>
-      <ion-card-title>{{category.doc.name}}</ion-card-title>
-    </ion-card-header>
+    <ion-item>
+    	<ion-card-header>
+      	<ion-card-title>{{category.doc.name}}</ion-card-title>
+    	</ion-card-header>
     </ion-item>
-    <ng-container *ngFor="let product of category.doc.products">
-    	<ng-container *ngFor="let item of removeDuplicateAndSort(product.competitive)">
-    		<ion-item>
-      		<ion-checkbox  disabled="false" (ionChange)="checkedItem($event, item, product.name)" [checked]="hasItem(item, product.name)"></ion-checkbox><p> &nbsp;{{item}}</p>
-      	</ion-item>
-    	</ng-container>
-	</ng-container>
+    <ion-grid>
+      <ion-row>
+        <ng-container *ngFor="let product of category.doc.products">
+    			<ng-container *ngFor="let item of removeDuplicateAndSort(product.competitive)">
+    				<ion-col size="6">
+    					<ion-item>
+      					<ion-checkbox  disabled="false" (ionChange)="checkedItem($event, item, product.name)" [checked]="hasItem(item, product.name)"></ion-checkbox><p> &nbsp;{{item}}</p>
+      				</ion-item>
+      			</ion-col>
+    			</ng-container>
+				</ng-container>
+      </ion-row>
+    </ion-grid>
   </ion-card>
   <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
   <ion-item> </ion-item>
