--- a/src/app/competitive-install/competitive-install.page.html
+++ b/src/app/competitive-install/competitive-install.page.html
@@ -7,17 +7,27 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card *ngFor="let category of products">
+  <ion-card *ngFor="let category of this.productList">
     <ion-item>
     	<ion-card-header>
-      	<ion-card-title>{{category.doc.name}}</ion-card-title>
+      	<ion-card-title>{{category}}</ion-card-title>
     	</ion-card-header>
     </ion-item>
     <ion-grid>
       <ion-row>
+        <ion-col size="4" *ngFor="let item of this.competitiveProductMap.get(category)">
+          <ion-item>
+                <ion-checkbox  disabled="false"></ion-checkbox><p> &nbsp;{{item.competitive}}</p>
+              </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <!--ion-item *ngFor="let item of this.competitiveProductMap.get(category)">{{item.competitive}}</ion-item>
+    <ion-grid>
+      <ion-row>
         <ng-container *ngFor="let product of category.doc.products">
     			<ng-container *ngFor="let item of removeDuplicateAndSort(product.competitive)">
-    				<ion-col size="6">
+    				<ion-col size="4">
     					<ion-item>
       					<ion-checkbox  disabled="false" (ionChange)="checkedItem($event, item, product.name)" [checked]="hasItem(item, product.name)"></ion-checkbox><p> &nbsp;{{item}}</p>
       				</ion-item>
@@ -25,7 +35,7 @@
     			</ng-container>
 				</ng-container>
       </ion-row>
-    </ion-grid>
+    </ion-grid-->
   </ion-card>
   <ion-button expand="block" (click)="complete('/acct-info')">Continue</ion-button>
   <ion-item> </ion-item>
