Changed wording of suggestion

--- a/src/app/report/report.page.html
+++ b/src/app/report/report.page.html
@@ -42,7 +42,7 @@
   </ng-container>
   <ion-card *ngFor="let product of this.auth.currentAccount.competitiveInstall">
     <ion-card-header>
-      <ion-card-title> We recommend the sales play for: {{product.name}}</ion-card-title>
+      <ion-card-title> Recommended sales play for: {{product.name}}</ion-card-title>
     </ion-card-header>
     <ion-item>Because your client is currently using these competitive products: {{product.competitive}}</ion-item>
     <ion-item><a href="{{product.url}}" target="_blank">Link to sales play</a></ion-item>
